--- a/index.html
+++ b/index.html
@@ -1,46 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>
-// Titel
-</title>
+<title>DVAG</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-</head>
-<body>
+<style>
 
-// Überschirft 
-<h1></h1>
+	.hintergrund {
+		background-color: rgb(125, 173, 186); 
+		margin-right: auto; 
+		marign-left:auto
+	}
+	.zutaten-circle {
+		list-style-type: circle;
+	}
+	
+	.zutaten-square {
+		list-style-type: square;
+	}		
+</style>
+</head>
+<body class="hintergrund">
+
+<h1 style="text-align:center; color:rgb(248, 236, 248) ">Schoko Kuchen</h1>
 
 <div style="display:flex; flex-direction: row;">
-// Bilder 
-<img  src="" alt="" title="" width="" height="" />
-
+<img  src="bilder/bild02.jpg" alt="Kaesekuchen1" title="Kaesekuchen" width="250" height="250" />
+<img  src="bilder/bild04.jpeg" alt="kaesekuchen_rund" title="Kaesekuchen" width="250" height="250" />
 </div>
 
 
 
-<p style="font-size: px; ">Zutaten: </p>
-<p style = "font-size: px;">Für den Knetteig:</p>
-// Liste
-<ul>
-  <li></li>
-</ul>
+<p style="font-size: 35px; ">Zutaten: </p>
+<div style="display:flex; flex-direction: row; justify-content:flex-start;">
+  <div>
+    <p style = "font-size: 25px;">Für den Knetteig:</p>
+    <ul style="color:rgb(255, 255, 255)" class="zutaten-circle">
+      <li>200g Butter</li>
+      <li>180g Vollrohrzucker</li>
+      <li>2 TL Vanillezucker</li>
+      <li>1/4 TL Salz</li>
+      <li>3	Eier </li>
+      <li>10 EL Milch</li>
+    <li>200 gramm Mehl</li>
+      <li>2 1/2 TL Backpulver</li>
+      <li>60g Kakao</li>
+      <li>50g Schokotropfchen</li>
+      <li>100g Zartbitterkuverture</li>
+      <li>add	Butter (zum einfetten)</li>
+      <li>add Mehl (zum bestauben)</li>
+      
+      
+    </ul>
+  </div>
 
-<p style = "font-size: px;">Für die Füllung::</p>
-//Liste
-<ul>
-  <li></li>
-  </ul>
+<div>
+  <img style="padding-top:8px ; margin-top: 18px;" src="bilder/bild01.png" alt="Kaesekuchen2" title="Kaesekuchen" width="250" height="250" />
 
-<p style="color:  ; font-size: px">Zubereitung: </p>
-//Vorgehensweise  
-<p> </p>
-<p style="color:  ; font-size: px">Backzeit: </p>
+</div>
 
-<p>Hier kannst du nach andere Rezepten suchen: 
-// Verlinken
-<a href="" target="_blank">Google</a> 
-</p>
+</div>
 
-</body>
+
+<p style="color:rgb(26, 51, 134); font-size: 25px"> Unser Einfaches,schnelles rezept für einen tollen schokokuchen braucht keine lange Anleitung.Wir zeigen dir wie dir dein Schokokuchen gelingt. </p>
+
+
+
+
+<p>Hier kannst du nach andere Rezepten suchen: <a href="https://www.chefkoch.de/" target="_blank">chefkoch!</a> </p
 </html>
