--- a/Beispiel.html
+++ b/Beispiel.html
@@ -6,7 +6,7 @@
 <style>
 
 	.hintergrund {
-		background-color: yellow; 
+		background-color: rgb(125, 173, 186); 
 		margin-right: auto; 
 		marign-left:auto
 	}
@@ -21,55 +21,50 @@
 </head>
 <body class="hintergrund">
 
-<h1 style="text-align:center; color:purple "> Oma's Käsekuchen</h1>
+<h1 style="text-align:center; color:rgb(248, 236, 248) ">Schoko Kuchen</h1>
 
 <div style="display:flex; flex-direction: row;">
-<img  src="bilder/Kaesekuchen.jpeg" alt="Kaesekuchen1" title="Kaesekuchen" width="250" height="250" />
-<img  src="bilder/kaesekuchen_rund.jpeg" alt="kaesekuchen_rund" title="Kaesekuchen" width="250" height="250" />
-<img  src="bilder/Kaesekuchen.jpeg" alt="Kaesekuchen2" title="Kaesekuchen" width="250" height="250" /></div>
+<img  src="bilder/bild02.jpg" alt="Kaesekuchen1" title="Kaesekuchen" width="250" height="250" />
+<img  src="bilder/bild04.jpeg" alt="kaesekuchen_rund" title="Kaesekuchen" width="250" height="250" />
+</div>
 
 
 
 <p style="font-size: 35px; ">Zutaten: </p>
-<p style = "font-size: 25px;">Für den Knetteig:</p>
-<ul style="color:green" class="zutaten-circle">
-  <li>200 g	Mehl</li>
-  <li>75 g	Zucker</li>
-  <li>75 g	Margarine</li>
-  <li>1	Ei(er)</li>
-  <li> ½ Pck.	Backpulver </li>
-  <li>Fett für die Form</li>
-</ul>
+<div style="display:flex; flex-direction: row; justify-content:flex-start;">
+  <div>
+    <p style = "font-size: 25px;">Für den Knetteig:</p>
+    <ul style="color:rgb(255, 255, 255)" class="zutaten-circle">
+      <li>200g Butter</li>
+      <li>180g Vollrohrzucker</li>
+      <li>2 TL Vanillezucker</li>
+      <li>1/4 TL Salz</li>
+      <li>3	Eier </li>
+      <li>10 EL Milch</li>
+    <li>200 gramm Mehl</li>
+      <li>2 1/2 TL Backpulver</li>
+      <li>60g Kakao</li>
+      <li>50g Schokotropfchen</li>
+      <li>100g Zartbitterkuverture</li>
+      <li>add	Butter (zum einfetten)</li>
+      <li>add Mehl (zum bestauben)</li>
+      
+      
+    </ul>
+  </div>
 
-<p style = "font-size: 25px;">Für die Füllung::</p>
-<ul style="color:blue" class="zutaten-square">
-  <li>125 g	Margarine</li>
-  <li>225 g	Zucker</li>
-  <li>1 Beutel Vanillezucker</li>
-  <li>1 Beutel Vanillepuddingpulver</li>
-  <li> 3	Ei(er)</li>
-  <li>1 Becher	Quark, 500 g</li>
-  <li> 1 Becher	saure Sahne, 200 g</li>
-  <li> 1 Becher	süße Sahne, 200 g </li>
-</ul>
+<div>
+  <img style="padding-top:8px ; margin-top: 18px;" src="bilder/bild01.png" alt="Kaesekuchen2" title="Kaesekuchen" width="250" height="250" />
 
-<p style="color:black; font-size: 25px">Zubereitung: </p>
-<p>Die Zutaten für den Knetteig in eine Schüssel geben, rasch zusammenkneten und zur Seite stellen.
-</p>
+</div>
 
-<p>Für die Füllung Margarine, Zucker, Vanillezucker, Puddingpulver und Eier in einer Schüssel verrühren. Dann den Quark und die saure Sahne untermischen. Die süße Sahne steif schlagen und unterheben.</p>
+</div>
 
-<p>Den Backofen auf 180 °C Ober-/Unterhitze vorheizen.</p>
 
-<p>Den Knetteig in einer gefetteten 26er Springform auslegen, etwa 2 - 3 cm am Rand hochziehen. Nun die Füllung in die Form geben, glatt streichen und im heißen Backofen 1 Stunde backen.</p>
-<br>
+<p style="color:rgb(26, 51, 134); font-size: 25px"> Unser Einfaches,schnelles rezept für einen tollen schokokuchen braucht keine lange Anleitung.Wir zeigen dir wie dir dein Schokokuchen gelingt. </p>
 
-<p><p style="font-weight: bold; color:red">Achtung:</p> Den Kuchen erst nach dem völligen Erkalten aus der Form nehmen, da unmittelbar nach dem Herausnehmen aus dem Backofen die Konsistenz der Quarkmasse noch zu weich ist.</p>
 
-<br>
-<p style="color:black; font-size: 20px">Backzeit: ca. 1 Stunde 30 Minuten</p>
 
-<p>Hier kannst du nach andere Rezepten suchen: <a href="https://www.chefkoch.de/" target="_blank">chefkoch!</a> </p>
 
-</body>
+<p>Hier kannst du nach andere Rezepten suchen: <a href="https://www.chefkoch.de/" target="_blank">chefkoch!</a> </p
 </html>
